# video-pyker

./: LICENSE.md  README.md  pyproject.toml
src/video_pyker/: __main__.py  game.py  main.py  screen.py
